Make sure labels can break if too long

--- a/app/assets/stylesheets/custom_bootstrap/custom_bootstrap.less
+++ b/app/assets/stylesheets/custom_bootstrap/custom_bootstrap.less
@@ -219,6 +219,9 @@ a:hover h1, a:hover h2, a:hover h3, a:hover h4 {
 input.form-control {
     font-family: @font-family-serif;
 }
+.control-label {
+    word-wrap: break-word;
+}
 
 
 .event-date {
